# Technovaa

./: README.md  pyproject.toml
data/: df_clean.csv  performance.csv  sirh.csv  survey.csv
notebooks/: 01_EDA_and_Cleaning.ipynb  02_Modeling_and_SHAP.ipynb
