[project]
name = "technova-turnover"
version = "0.1.0"
description = "Analyse du turnover chez TechNova Partners"
authors = [{ name = "Selma" }]
requires-python = ">=3.11,<3.13"

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "imbalanced-learn>=0.12",
    "jupyterlab>=4.0"
]

[tool.uv]  # si tu utilises uv
